se confirma los cambios

--- a/Usac_Banco/Usac_Banco/Web.config
+++ b/Usac_Banco/Usac_Banco/Web.config
@@ -76,6 +76,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="banco_practica_3Entities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;user id=root;password=1234;database=banco_practica_3&quot;" providerName="System.Data.EntityClient" />
+    <add name="banco_practica_3Entities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;user id=root;password=1234;database=banco_practica_3&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
