--- a/Usac_Banco/Usac_Banco/Usac_Banco.csproj
+++ b/Usac_Banco/Usac_Banco/Usac_Banco.csproj
@@ -165,6 +165,7 @@
     <Compile Include="Controllers\cuentasController.cs" />
     <Compile Include="Controllers\debitoesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\rolsController.cs" />
     <Compile Include="Controllers\usuariosController.cs" />
     <Compile Include="credito.cs">
       <DependentUpon>Model1.tt</DependentUpon>
@@ -195,6 +196,9 @@
     </Compile>
     <Compile Include="Models\Login.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="rol.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="usuario.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -419,6 +423,11 @@
     <Content Include="vendor\font-awesome\scss\_variables.scss" />
     <Content Include="Views\usuarios\Login.cshtml" />
     <Content Include="Views\usuarios\Index.cshtml" />
+    <Content Include="Views\rols\Create.cshtml" />
+    <Content Include="Views\rols\Delete.cshtml" />
+    <Content Include="Views\rols\Details.cshtml" />
+    <Content Include="Views\rols\Edit.cshtml" />
+    <Content Include="Views\rols\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
