--- a/Usac_Banco/Usac_Banco/Usac_Banco.csproj
+++ b/Usac_Banco/Usac_Banco/Usac_Banco.csproj
@@ -192,7 +192,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Model1.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Models\Credito.cs" />
     <Compile Include="Models\Login.cs" />
+    <Compile Include="Models\Transferencia.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="rol.cs">
       <DependentUpon>Model1.tt</DependentUpon>
@@ -428,6 +430,8 @@
     <Content Include="Views\debitoes\Index.cshtml" />
     <Content Include="Views\usuarios\AdminInd.cshtml" />
     <Content Include="Views\usuarios\Info.cshtml" />
+    <Content Include="Views\usuarios\Transferencia.cshtml" />
+    <Content Include="Views\usuarios\TransExito.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
